# learn_bevy_shader

./: .gitignore  Cargo.toml  README.md
assets/shaders/: post_processing.wgsl
examples/: poses.json  poses.rs
src/: export_image.rs  lib.rs  main.rs  post_processing.rs
