[package]
name = "learn_shader"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", features = ["jpeg"] }
bevy_panorbit_camera = "0.25.0"
bevy_rapier3d = { version = "0.29.0", features = ["debug-render-3d", "simd-stable"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"]}
futures = "0.3"
futures-lite = "2.1"
crossbeam-channel = "0.5.15"
rayon = "1.10.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
