[package]
name = "learn_shader"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = ["jpeg"] }
bevy_panorbit_camera = "0.26.0"
bevy_rapier3d = { version = "0.30.0", features = ["debug-render-3d", "simd-stable"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"]}
futures = "0.3"
futures-lite = "2.1"
crossbeam-channel = "0.5.15"
rayon = "1.10.0"

[[example]]
name = "one_frame"

[[example]]
name = "shader_play"

[[example]]
name = "poses"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
b-spline = "0.2.0"
bevy_panorbit_camera = "0.26.0"
bytemuck = "1.23.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
